Fixed bug with background cropping suddenly.

--- a/Components/Pages/Home.razor.css
+++ b/Components/Pages/Home.razor.css
@@ -20,4 +20,10 @@
   height: 100%;
 }
 
+@media (min-width: 576px) {
+  .logo-row {
+    padding-bottom: 5%;
+  }
+}
+
 /*# sourceMappingURL=Home.razor.css.map */
